[package]
name = "keeprs"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "*"
axum = "0.7.9" # pinned due to tonic 0.12.3
clap = { version = "4.5.40", "features" = ["env", "derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
dotenv = "0.15.0"
drift-rs = { git = "https://github.com/drift-labs/drift-rs", rev = "54d25351", features = ["unsafe_pub"] }
env_logger = "0.11"
# DLOB 'trace' logs are expensive so compile them out
log = { version = "0.4", features = ["max_level_trace"] }
futures-util = "0.3.31"
prometheus = "*"
pyth-lazer-client = "0.1.3"
pyth-lazer-protocol = "0.7.3"
solana-account-decoder-client-types = "2.3"
solana-rpc-client = "2.3"
solana-rpc-client-api = "2.3"
solana-sdk = "2.3"
solana-transaction-status = "2.3"
solana-transaction-status-client-types = "2.3"
tokio = "*"
mimalloc = "0.1.47"

[[bin]]
name = "tx_history"
path = "src/tx_history.rs"
